# smartscrape

./: .gitignore  README.md  bot.py  pyproject.toml  smartscrape.py
src/smartscrape/: __init__.py  cli.py  models.py  scraper.py
