[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartscrape"
version = "0.1.0"
description = "Scraper de metadados de filmes do Letterboxd a partir das meta tags da página."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Laércio S Filho" }]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
smartscrape = "smartscrape.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
